{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 66,
  "lineage": "9b811928-b72f-2900-edad-7750b18183a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b09ec6240624138",
            "arn": "arn:aws:ec2:us-east-1:471112634889:instance/i-0a3c133664e092106",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "codesafe-ec2-profile",
            "id": "i-0a3c133664e092106",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0139b7931cf63f1a3",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-3-81-159-211.compute-1.amazonaws.com",
            "public_ip": "3.81.159.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cdd5899a1d52e2ce",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0539f5e2d4a0eed76",
            "tags": {
              "Name": "codesafe-backend"
            },
            "tags_all": {
              "Name": "codesafe-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aab0ca3ef7318cfe"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_dynamodb_table.pentest_results",
            "aws_dynamodb_table.repos",
            "aws_dynamodb_table.scans",
            "aws_dynamodb_table.schedules",
            "aws_iam_instance_profile.ec2",
            "aws_security_group.ec2_backend",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_iam_role.lab_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:internet-gateway/igw-0b648b3a4e4acea7b",
            "id": "igw-0b648b3a4e4acea7b",
            "owner_id": "471112634889",
            "tags": {
              "Name": "codesafe-igw"
            },
            "tags_all": {
              "Name": "codesafe-igw"
            },
            "vpc_id": "vpc-04acceeebdbcf33e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:route-table/rtb-0e77160ce2a3e87f2",
            "id": "rtb-0e77160ce2a3e87f2",
            "owner_id": "471112634889",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "codesafe-private-rt"
            },
            "tags_all": {
              "Name": "codesafe-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04acceeebdbcf33e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:route-table/rtb-0165e9d1c637a9201",
            "id": "rtb-0165e9d1c637a9201",
            "owner_id": "471112634889",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b648b3a4e4acea7b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "codesafe-public-rt"
            },
            "tags_all": {
              "Name": "codesafe-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04acceeebdbcf33e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c44efa3be39f5d79",
            "route_table_id": "rtb-0e77160ce2a3e87f2",
            "subnet_id": "subnet-0ca19a59b209e3e45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f87b1b690e261948",
            "route_table_id": "rtb-0165e9d1c637a9201",
            "subnet_id": "subnet-0539f5e2d4a0eed76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:security-group/sg-0aab0ca3ef7318cfe",
            "description": "Allow inbound HTTPS and app port; allow all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aab0ca3ef7318cfe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App port",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "codesafe-ec2-backend-sg",
            "name_prefix": "",
            "owner_id": "471112634889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "codesafe-ec2-backend-sg"
            },
            "tags_all": {
              "Name": "codesafe-ec2-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04acceeebdbcf33e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:security-group/sg-07f41c668b63b6018",
            "description": "Lambda functions - outbound only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f41c668b63b6018",
            "ingress": [],
            "name": "codesafe-lambda-sg",
            "name_prefix": "",
            "owner_id": "471112634889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "codesafe-lambda-sg"
            },
            "tags_all": {
              "Name": "codesafe-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04acceeebdbcf33e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:subnet/subnet-0ca19a59b209e3e45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca19a59b209e3e45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112634889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "codesafe-private-subnet"
            },
            "tags_all": {
              "Name": "codesafe-private-subnet"
            },
            "vpc_id": "vpc-04acceeebdbcf33e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:subnet/subnet-0539f5e2d4a0eed76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0539f5e2d4a0eed76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112634889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "codesafe-public-subnet"
            },
            "tags_all": {
              "Name": "codesafe-public-subnet"
            },
            "vpc_id": "vpc-04acceeebdbcf33e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112634889:vpc/vpc-04acceeebdbcf33e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0100eeea631025421",
            "default_route_table_id": "rtb-057cd23d1cf5062b1",
            "default_security_group_id": "sg-02a22f962a4f490fd",
            "dhcp_options_id": "dopt-03a408e4844a76d8c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04acceeebdbcf33e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057cd23d1cf5062b1",
            "owner_id": "471112634889",
            "tags": {
              "Name": "codesafe-vpc"
            },
            "tags_all": {
              "Name": "codesafe-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}